# jane

./: .gitignore  CMakeLists.txt  README.md  config.h
cmake/: Findllvm.cmake
example/: hello.jn  include_files.jn  testother.jn
src/: analyze.cpp  buffer.cpp  codegen.cpp  config.h.in  error.cpp  gm-code.txt  jane_llvm.cpp  main.c  main.cpp  os.cpp  parser.cpp  parsergenerator.cpp  tokenizer.cpp  util.cpp
src/include/: analyze.hpp  buffer.hpp  codegen.hpp  error.hpp  hash_map.hpp  jane_llvm.hpp  list.h  list.hpp  os.hpp  parser.hpp  semantic_info.hpp  token.h  tokenizer.hpp  util.h  util.hpp
